--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 @import url('https://fonts.googleapis.com/css?family=Anonymous+Pro:400,400i,700,700i');
 /*font-family: 'Cormorant', serif;*/ 
 
@@ -20,14 +18,13 @@ html, body {
 
 html {
 	font-size: 20px;
-	height: 3500px;
 }
 
 body {
 	margin: 0;
 	text-align: center;
 	min-width: 800px;
-	height: 3500px;
+	background-color: white;
 }
 
 h1, h2, p {
@@ -46,6 +43,81 @@ h2 {
 	font-size: 1.1rem;
 	margin-left: -0.5rem;
 	margin-top: -0.7rem;
+}
+
+.big-wrapper {
+	display: none;
+}
+
+.intro-splash {
+	position: fixed;
+	display: none;
+	width: 100%;
+	height: 800px;
+	background-image: url(map-texture.png);
+	background-color: white;
+	background-size: 100% 100%;
+	background-position: center;
+	z-index: 1000;
+	overflow: hidden;
+	perspective: 500px;
+	background-color: white;
+	perspective: 15px;
+	transition: 2000ms all ease-in-out;
+}
+
+.intro-splash-active {
+	transform: rotateX(50deg);
+	background-size: 150% 150%;
+	height: 1500px;
+	width: 200%;
+	margin-top: -450px;
+	margin-left: -50%;
+	transition: 2000ms all ease-in-out;
+}
+
+.intro-text {
+	position: fixed;
+	display: none;
+	width: 70%;
+	height: 600px;
+	z-index: 1200;
+	margin-left: 15%;
+	background-size: 130% 130%;
+	background-position: center;
+}
+
+.intro-text h1 {
+	font-size: 3.5rem;
+	font-weight: 600;
+	margin-top: 9rem;
+	line-height: 0px;
+}
+
+.underline {
+	display: inline-block;
+	width: 370px;
+	height: 5px;
+	background-color: black;
+}
+
+.button-start {
+	display: inline-block;
+	width: 8rem;
+	height: 1.5rem;
+	border-style: solid;
+	border-width: 5px;
+	border-color: black;
+	font-family: 'IBMPlexMono', monospace;
+	font-size: 12px;
+	line-height: 25px;
+	margin-top: 1rem;
+}
+
+.button-start:hover {
+	background-color: black;
+	color: white;
+	cursor: pointer;
 }
 
 .header span {
@@ -82,6 +154,10 @@ h3 {
 	width: 40rem;
 	height: 25rem;
 	margin-bottom: 30rem;
+}
+
+#sec1 {
+	margin-top: 10rem;
 }
 
 .bs {
@@ -692,7 +768,7 @@ h3 {
 	width: 8.8rem;
 	height: 9rem;
 	background-color: white;
-	margin-left: 18rem;
+	margin-left: 15rem;
 	margin-top: 15rem;
 }
 
@@ -1847,6 +1923,14 @@ h3 {
 
 }
 
+.final-text {
+	position: absolute;
+	width: 80%;
+	display: inline-block;
+	height: 350px;
+	left: 10%;
+	margin-top: 350px;
+}
 
 
 
